--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -39,6 +39,11 @@
             <!-- Right-aligned Links -->
             <ul class="navbar-nav ms-md-auto mt-2 mt-md-0">
                 <li class="nav-item">
+                    <button id="darkModeToggle" class="btn btn-outline-dark ms-3" title="Toggle Dark Mode">
+                        <i id="themeIcon" class="fa-solid fa-moon"></i>
+                    </button>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="/listings/new">Airbnb your home</a>
                 </li>
 
