--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -3,7 +3,7 @@
     <div class="container my-5">
         <div class="row justify-content-center">
             <div class="col-lg-8 col-md-10">
-                <div class="p-4 border rounded shadow-sm bg-light">
+                <div class="p-4 border rounded shadow-sm bg-light form-card">
                     <h3 class="mb-4 text-center">Edit Your Listing</h3>
                     <form method="POST" action="/listings/<%= listing._id %>?_method=PUT" class="needs-validation"
                         novalidate enctype="multipart/form-data">
