--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -31,8 +31,8 @@
         <!-- Listing Details + Map -->
         <div class="row justify-content-center g-4">
             <div class="col-lg-6">
-                <div class="p-4 border rounded shadow-sm bg-light">
-                    <h5 class="mb-3 text-dark">Hosted by <%= listing.owner.username %>
+                <div class="p-4 border rounded shadow-sm listing-detail-card">
+                    <h5 class="mb-3 owner-heading">Hosted by <%= listing.owner.username %>
                     </h5>
                     <p>
                         <%= listing.description %>
@@ -53,7 +53,7 @@
 
             <!-- Map -->
             <div class="col-lg-5">
-                <div class="p-4 border rounded shadow-sm bg-light h-100">
+                <div class="p-4 border rounded shadow-sm h-100 listing-detail-card">
                     <h5>Where you'll be</h5>
                     <div id="map" class="rounded mt-3" style="height: 300px;"></div>
                 </div>
@@ -66,7 +66,7 @@
                 <div class="col-lg-10">
                     <h4>Leave a Review</h4>
                     <form action="/listings/<%= listing.id %>/reviews" method="POST"
-                        class="p-4 border rounded shadow-sm bg-light">
+                        class="p-4 border rounded shadow-sm listing-detail-card">
                         <label class="form-label">Rating</label>
                         <fieldset class="starability-slot mb-3">
                             <% for (let i=1; i <=5; i++) { %>
@@ -93,7 +93,7 @@
                             <div class="row gy-4 mt-2">
                                 <% for(review of listing.reviews) { %>
                                     <div class="col-md-6">
-                                        <div class="p-3 border rounded shadow-sm bg-white h-100">
+                                        <div class="p-3 border rounded shadow-sm review-card h-100">
                                             <h6>
                                                 <%= review.author.username %>
                                             </h6>
