--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -3,7 +3,7 @@
     <div class="container my-5">
         <div class="row justify-content-center">
             <div class="col-md-8 col-lg-6">
-                <div class="p-4 border rounded shadow-sm bg-light">
+                <div class="p-4 border rounded shadow-sm bg-light form-card">
                     <h3 class="text-center mb-4">Login to Wanderlust</h3>
                     <form action="/login" method="POST" class="needs-validation" novalidate>
                         <div class="mb-3">
